--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
  body {background-color:grey;}
-      h1 {font-family:helvetica neue;
+      h1 {font-family:helvetica;
           font-size: 56px;
       }
       p {font-family:helvetica;
