--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
- body {background-color:grey;}
+ body {background-color:burlywood;}
       h1 {font-family:font76794;
           font-size: 64px;
       }
