--- a/style.css
+++ b/style.css
@@ -4,7 +4,10 @@
       }
       p {font-family:helvetica;
          font-variant:small-caps;
-         text-indent:26px;
+         text-indent:26px
+         border:1px solid black;
+         padding:5px;
+         height:50px;
       }
       h2 {font-family:helvetica;}
       ul {font-family:helvetica;
