--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@
       h3 {font-family:helvetica;}
       p2 {font-family:helvetica;}
  table, th, tr {
+        vertical-align: left;
         text-align: left;
         color: #01426a
       }
