--- a/style.css
+++ b/style.css
@@ -4,13 +4,17 @@
       }
       p {font-family:helvetica;
          font-variant:small-caps;
-         text-indent:26px
+         text-indent:26px;
       }
       h2 {font-family:helvetica;}
       ul {font-family:helvetica;
           font-variant:small-caps;
+          font-size: 32px;
+       
       }
-      h3 {font-family:helvetica;}
+      h3 {font-family:helvetica;
+          font-size: 32px;
+}
       p2 {font-family:helvetica;}
  table, th, tr {
         vertical-align: left;
