--- a/style.css
+++ b/style.css
@@ -6,9 +6,7 @@
          font-variant:small-caps;
          text-indent:26px;
       }
-      h2 {font-family:helvetica;}
-      ul {font-family:helvetica;
-          font-variant:small-caps;
+      h2 {font-family:helvetica;
           font-size: 32px;
        
       }
