--- a/style.css
+++ b/style.css
@@ -3,12 +3,13 @@
           font-size: 64px;
           background-color: white;
        display:inline;
+       box-shadow: 10px 10px 5px #888888;
       }
       p {font-family:helvetica;
          font-variant:small-caps;
          text-indent:26px;
          background-color: white;
-       display:inline;
+       box-shadow: 10px 10px 5px #888888;
       }
       h2 {font-family:helvetica;
           font-size: 26px;
