--- a/style.css
+++ b/style.css
@@ -25,9 +25,7 @@
        display:inline;
 }
       h3 {font-family:helvetica;
-          font-size: 32px;
-          background-color: white;
-       display:inline;
+          font-size: 32px
 }
       p2 {font-family:helvetica;}
 background-color: white;
@@ -37,4 +35,11 @@ table {
     border-collapse: separate;
     border-spacing: 10px 50px;
 }
-     
+div img {
+    -webkit-transition: width 2s, height 4s; 
+    transition: width 2s, height 4s;
+}  
+div:hover {
+    width: 300px;
+    height: 300px;
+}
