--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
          text-indent:26px;
          background-color: white;
        box-shadow: 10px 10px 5px #888888;
+       margin: 20px, 0px, 0px;
       }
       h2 {font-family:helvetica;
           font-size: 26px;
