--- a/style.css
+++ b/style.css
@@ -8,7 +8,8 @@
           background-color: white;
        display:inline;
        box-shadow: 10px 10px 5px #888888;
-       margin: 20px, 0px, 0px, 0px;
+       margin-bottom: 50px;
+       margin-top: 20px;
       }
       p {font-family:helvetica;
          font-variant:small-caps;
