--- a/style.css
+++ b/style.css
@@ -8,8 +8,8 @@
           background-color: white;
        display:inline;
        box-shadow: 10px 10px 5px #888888;
-       margin-bottom: 100px;
        margin-top: 50px;
+       margin-bottom: 100px;
       }
       p {font-family:helvetica;
        display:inline;
@@ -22,7 +22,7 @@
       h2 {font-family:helvetica;
           font-size: 26px;
           background-color: white;
-       display:inline
+       display:inline;
         margin-top: 90px;
 }
       ul { 
