--- a/style.css
+++ b/style.css
@@ -9,7 +9,6 @@
        display:inline;
        box-shadow: 10px 10px 5px #888888;
        margin-top: 50px;
-       margin-bottom: 100px;
       }
       p {font-family:helvetica;
        display:inline;
@@ -19,7 +18,7 @@
        box-shadow: 10px 10px 5px #888888;
        margin-top: 100px;
       }
-      h2 {font-family:helvetica;
+      h2 {font-family:font76794;
           font-size: 26px;
           background-color: white;
        display:inline;
