--- a/style.css
+++ b/style.css
@@ -22,7 +22,8 @@
           font-size: 32px;
           background-color: white;
        display:inline;
-        margin-top: 90px;
+        margin-top: 100px;
+       box-shadow: 10px 10px 5px #888888;
 }
       ul { 
        font-family:helvetica;
@@ -34,6 +35,7 @@
           font-size: 32px;
        background-color: white;
        display:inline;
+       box-shadow: 10px 10px 5px #888888;
 }
       p2 { 
        font-family:helvetica; 
