--- a/style.css
+++ b/style.css
@@ -50,3 +50,15 @@ hr {
        background-color: white;
        display:inline;
 }
+
+a {
+  font-size: 12px;
+  background-color: white;
+ color: black;
+ text-align: center;
+    text-decoration: none;
+    display: inline-block;
+
+a:hover {
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
