--- a/style.css
+++ b/style.css
@@ -52,9 +52,11 @@ hr {
 }
 
 a {
-  font-size: 12px;
+  font-size: 24px;
+ padding: 10px 24px;
   background-color: white;
  color: black;
+ font-family: helvetica;
  text-align: center;
     text-decoration: none;
     display: inline-block;
