--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ hr {
 }
 
 a {
-  font-size: 24px;
+  font-size: 12px;
  padding: 10px 24px;
   background-color: white;
  color: black;
@@ -61,6 +61,6 @@ a {
     text-decoration: none;
     display: inline-block;
 
-a:hover {
+.a: hover {
     box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
