--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ a {
  text-align: center;
     text-decoration: none;
     display: inline-block;
-
+    margin-bottom: 10px;
 .a: hover {
     box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
