--- a/style.css
+++ b/style.css
@@ -61,6 +61,8 @@ a {
     text-decoration: none;
     display: inline-block;
     margin-bottom: 10px;
+ margin-left: 5px;
+ margin-top: 10px;
 .a: hover {
     box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
