--- a/style.css
+++ b/style.css
@@ -63,6 +63,6 @@ a {
     margin-bottom: 10px;
  margin-left: 5px;
  margin-top: 10px;
-.a: hover {
-    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+ border: 2px solid #555555;
 }
+
